--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Firebase Example</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="p-3 mb-2 bg-info text-white"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
