--- a/index.html
+++ b/index.html
@@ -8,5 +8,12 @@
   <body>
     <div id="root" class="p-3 mb-2 bg-dark text-white"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>My Awesome App</title>
+    <meta name="description" content="My Awesome App description">
+    <link rel="icon" href="/favicon.ico">
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180">
+    <link rel="mask-icon" href="/mask-icon.svg" color="#FFFFFF">
+    <meta name="theme-color" content="#ffffff">
   </body>
 </html>
