--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>My Awesome App</title>
     <meta name="description" content="My Awesome App description">
-    <link rel="icon" href="/favicon.ico">
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png" sizes="180x180">
-    <link rel="mask-icon" href="/mask-icon.svg" color="#FFFFFF">
+    <link rel="icon" href="/favicon.ico.png">
+    <link rel="apple-touch-icon" href="/apple-icons-artboard_3d-touch-1-512.webp" sizes="180x180">
+    <link rel="mask-icon" href="/5985970.png" color="#FFFFFF">
     <meta name="theme-color" content="#ffffff">
   </body>
 </html>
